fix update User